--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="home">
         <div class="main">
             <h1 class="headings"> I Am <br> LIETH KH ZAITOUN</h1>
-            <a href="/protfolio/Lieth_Zaitoun_Resume_3.PDF" download><button class="btn" id="button">
+            <a href="./protfolio/Lieth_Zaitoun_Resume_3.PDF" download><button class="btn" id="button">
                     Download CV
                 </button>
             </a>
@@ -143,7 +143,4 @@
     </footer>
     <script src="app.js"></script>
 </body>
-
-
-
 </html>
