--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="about">
         <h1 class="headings"> ABOUT ME</h1>
         <div id="pic">
-            <img src="IMG_9818.PNG" alt="">
+            <img src="./protfolio/Profile.png" alt="">
             <div id="intro">
                 <h2> LIETH KH ZAITOUN</h2>
                 <h3>
@@ -78,39 +78,47 @@
         <h1 id="headings" class="projects">PROJECTS</h1>
         <div class="row projects ">
             <div class="box">
+                
                 <img src="protfolio/money2.jpg" alt="">
-                <h1 class="headings">MASROOFI <br> App </h1>
-                <p class="size">MASROOFI APP Counting money is an important skill you will use in everyday life but
+                <h1 class="headings mb-auto">MASROOFI <br> App </h1>
+                <p class="size" >MASROOFI APP Counting money is an important skill you will use in everyday life but
                     with MASROOFI it's much easir to count your money and all your expenses sorts by categorys.
                     there is an history and date-time for all of your expenses and you can see them charts so u know
-                    whats the most thing you spent money on
+                    what's the most thing you spent money on. <br>
                 </p>
+                <a  class=" size stretched-link mt-auto p-1 mb-auto bg-white text-dark" href="https://1pyke.github.io/MASROOFI/">  View Here  </a>
             </div>
 
             <div class="box">
                 <img src="protfolio/Memmory-game2.jpg" alt="">
-                <h1 class="headings">Memory<br> Game</h1>
+                <h1 class="headings mb-auto">Memory<br> Game</h1>
                 <p class="size">The memory game is a common game played with a set of cards. ... If the two cards have
-                    the same picture, then they keep the cards, otherwise they turn the cards face down again </p>
+                    the same picture, then they keep the cards, otherwise they turn the cards face down again <br>
+                </p>
+                <a  class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark" href="https://1pyke.github.io/Memory-Game/">  View Here  </a>
             </div>
             <div class="box">
                 <img src="protfolio/Meditation App.png" alt="">
-                <h1 class="headings">Meditation App</h1>
+                <h1 class="headings mb-auto">Meditation App</h1>
                 <p class="size"> Meditation App for focusing the mind on a particular object , thought, or activity, by
                     playing a quit music that i produced – to train attention and awareness, and achieve a mentally
-                    clear and emotionally calm and stable state. </p>
+                    clear and emotionally calm and stable state. </p><br>
+                    <a  class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark" href="https://1pyke.github.io/Meditation-App/">  View Here  </a>
             </div>
             <div class="box">
                 <img src="protfolio/Karnov.jpg" alt="">
                 <h1 class="headings">Karnov <br> Beats </h1>
                 <p class="size">I'm Karnov a Nashville-Base Music Producer who meld modern electronic POP with the grit
                     and authenticity of hip hop and soul, This website for buying my music/beats or looking for
-                    collaborate with a music producer.</p>
+                    collaborate with a music producer. <br> Under Progress! </p>
+                    <a  class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark" href="https://1pyke.github.io/KARNOV-Beats/">  View Here  </a>
+                    
             </div>
             <div class="box">
                 <img src="protfolio/Pokemon.jpg" alt="">
                 <h1 class="headings">Pokemon</h1>
                 <p class="size">A simple website that count all the pokemons in the world :)</p>
+                <a  class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark" href="https://1pyke.github.io/Pokemon/">  View Here  </a>
             </div>
         </div>
     </section>
