Adding New Skills+CV

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </nav>
     <section id="home">
         <div class="main">
-            <h1 class="headings"> I Am <br> LIETH KH ZAITOUN</h1>
-            <a href="./protfolio/Lieth_Zaitoun_Resume_3.PDF" download><button class="btn" id="button">
+            <h1 class="headings"> I Am <br> LAITH KH ZAITOUN</h1>
+            <a href="./protfolio/Laith_Khaled Zaitoun_Resume.PDF" download><button class="btn" id="button">
                     Download CV
                 </button>
             </a>
@@ -68,25 +68,31 @@
             <img src="protfolio/html.png" alt="">
             <img src="protfolio/CSS3.svg" alt="">
             <img src="protfolio/js.png" alt="">
+            <img src="./protfolio/TW.png" alt="">
             <img src="protfolio/bootstrab.png" alt="">
+            <img src="./protfolio/vuejs-removebg-preview.png" alt="">
+            <img src="./protfolio/React.png" alt="">
             <img src="protfolio/git.png" alt="">
-            <!-- <img src="protfolio/img6.jfif" alt=""> -->
-
+            <img src="./protfolio/typescript-logo.png" alt="">
+            <img src="./protfolio/node-js-png-removebg-preview.png" alt="">
+            <img src="./protfolio/Exoress_js-removebg-preview.png" alt="">
+            <img src="./protfolio/mongodb-removebg-preview.png" alt="">
         </div>
     </section>
     <section id="servicse">
         <h1 id="headings" class="projects">PROJECTS</h1>
         <div class="row projects ">
             <div class="box">
-                
+
                 <img src="protfolio/money2.jpg" alt="">
                 <h1 class="headings mb-auto">MASROOFI <br> App </h1>
-                <p class="size" >MASROOFI APP Counting money is an important skill you will use in everyday life but
+                <p class="size">MASROOFI APP Counting money is an important skill you will use in everyday life but
                     with MASROOFI it's much easir to count your money and all your expenses sorts by categorys.
                     there is an history and date-time for all of your expenses and you can see them charts so u know
                     what's the most thing you spent money on. <br>
                 </p>
-                <a  class=" size stretched-link mt-auto p-1 mb-auto bg-white text-dark" href="https://1pyke.github.io/MASROOFI/">  View Here  </a>
+                <a class=" size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
+                    href="https://1pyke.github.io/MASROOFI/"> View Here </a>
             </div>
 
             <div class="box">
@@ -95,7 +101,8 @@
                 <p class="size">The memory game is a common game played with a set of cards. ... If the two cards have
                     the same picture, then they keep the cards, otherwise they turn the cards face down again <br>
                 </p>
-                <a  class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark" href="https://1pyke.github.io/Memory-Game/">  View Here  </a>
+                <a class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
+                    href="https://1pyke.github.io/Memory-Game/"> View Here </a>
             </div>
             <div class="box">
                 <img src="protfolio/Meditation App.png" alt="">
@@ -103,7 +110,8 @@
                 <p class="size"> Meditation App for focusing the mind on a particular object , thought, or activity, by
                     playing a quit music that i produced – to train attention and awareness, and achieve a mentally
                     clear and emotionally calm and stable state. </p><br>
-                    <a  class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark" href="https://1pyke.github.io/Meditation-App/">  View Here  </a>
+                <a class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
+                    href="https://1pyke.github.io/Meditation-App/"> View Here </a>
             </div>
             <div class="box">
                 <img src="protfolio/Karnov.jpg" alt="">
@@ -111,14 +119,26 @@
                 <p class="size">I'm Karnov a Nashville-Base Music Producer who meld modern electronic POP with the grit
                     and authenticity of hip hop and soul, This website for buying my music/beats or looking for
                     collaborate with a music producer. <br> Under Progress! </p>
-                    <a  class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark" href="https://1pyke.github.io/KARNOV-Beats/">  View Here  </a>
-                    
+                <a class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
+                    href="https://1pyke.github.io/KARNOV-Beats/"> View Here </a>
+
             </div>
             <div class="box">
                 <img src="protfolio/Pokemon.jpg" alt="">
                 <h1 class="headings">Pokemon</h1>
                 <p class="size">A simple website that count all the pokemons in the world :)</p>
-                <a  class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark" href="https://1pyke.github.io/Pokemon/">  View Here  </a>
+                <a class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
+                    href="https://1pyke.github.io/Pokemon/"> View Here </a>
+            </div>
+            <div class="box">
+
+                <img src="protfolio/attachment_83315236-removebg-preview.png" alt="">
+                <h1 class="headings mb-auto">Drums <br> Kit </h1>
+                <p class="size">a JavaScript Drum kit using the kit and melodies that i made, <br>
+                 At least so you can try some of production and how it works
+                </p>
+                <a class=" size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
+                    href="https://1pyke.github.io/Drum-Kit/"> View Here </a>
             </div>
         </div>
     </section>
@@ -151,4 +171,5 @@
     </footer>
     <script src="app.js"></script>
 </body>
+
 </html>
