adding new projects

--- a/index.html
+++ b/index.html
@@ -1,175 +1,288 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width:800px)" href="tablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 530px)" href="phone.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="bootstrap.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:800px)"
+      href="tablet.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 530px)"
+      href="phone.css"
+    />
+  </head>
 
-<body>
+  <body>
     <nav class="navbar">
-        <ul>
-            <li><a href="#home"> Home</a></li>
-            <li><a href="#about"> About Me</a></li>
-            <li><a href="#protfolio"> Skills</a></li>
-            <li><a href="#servicse"> Projects</a></li>
-            <li><a href="#contact"> Contact Me</a></li>
-        </ul>
+      <ul>
+        <li><a href="#home"> Home</a></li>
+        <li><a href="#about"> About Me</a></li>
+        <li><a href="#protfolio"> Skills</a></li>
+        <li><a href="#servicse"> Projects</a></li>
+        <li><a href="#contact"> Contact Me</a></li>
+      </ul>
     </nav>
     <section id="home">
-        <div class="main">
-            <h1 class="headings"> I Am <br> LAITH KH ZAITOUN</h1>
-            <a href="./protfolio/Laith_Khaled Zaitoun_Resume.PDF" download><button class="btn" id="button">
-                    Download CV
-                </button>
-            </a>
-        </div>
+      <div class="main">
+        <h1 class="headings">
+          I Am <br />
+          LAITH KH ZAITOUN
+        </h1>
+        <a href="./protfolio/Laith_Khaled Zaitoun_Resume.PDF" download
+          ><button class="btn" id="button">Download CV</button>
+        </a>
+      </div>
     </section>
     <section id="about">
-        <h1 class="headings"> ABOUT ME</h1>
-        <div id="pic">
-            <img src="./protfolio/Profile.png" alt="">
-            <div id="intro">
-                <h2> LIETH KH ZAITOUN</h2>
-                <h3>
-                    <P>Born Dec 5th, 1999, Studied Computer Science at Jerash University. ever since my childhood I've
-                        had a passion towards Music where I became a Music producer where I pursued my passtionand for 3
-                        years and got Verified on Spotify as a Musician, I distribute my music for 4 years but then in
-                        2017 I started to learn more about programing in general and built my first website using HTML5,
-                        CSS and I'm glad that I have got into web development.
-                        <br>
-                        <br>
-                        up until last year where I have got used to writing code and learning more about front-end
-                        development till today I'm still learning and i have so many goals to achieve and I'm pretty
-                        sure that I'll achieve them, during my learning gaurny I've worked on multiple projects using
-                        HTML5, CSS3, and JavaScript.
-                        <br>
-                        <br>
-                        I've completed a course on udemy (<a
-                            href="https://www.udemy.com/course/the-web-developer-bootcamp/">BootCamp 2021 By colt</a> ).
-                        <br>
-                        <br>
-                        My goals are That I wanna learn vue langue or react and become a master in front-end
-                    </P>
-                </h3>
-            </div>
+      <h1 class="headings">ABOUT ME</h1>
+      <div id="pic">
+        <img src="./protfolio/Profile.png" alt="" />
+        <div id="intro">
+          <h2>LIETH KH ZAITOUN</h2>
+          <h3>
+            <p>
+              Born Dec 5th, 1999, Studied Computer Science at Jerash University.
+              ever since my childhood I've had a passion towards Music where I
+              became a Music producer where I pursued my passtionand for 3 years
+              and got Verified on Spotify as a Musician, I distribute my music
+              for 4 years but then in 2017 I started to learn more about
+              programing in general and built my first website using HTML5, CSS
+              and I'm glad that I have got into web development.
+              <br />
+              <br />
+              up until last year where I have got used to writing code and
+              learning more about front-end development till today I'm still
+              learning and i have so many goals to achieve and I'm pretty sure
+              that I'll achieve them, during my learning gaurny I've worked on
+              multiple projects using HTML5, CSS3, and JavaScript.
+              <br />
+              <br />
+              I've completed a course on udemy (<a
+                href="https://www.udemy.com/course/the-web-developer-bootcamp/"
+                >BootCamp 2021 By colt</a
+              >
+              ).
+              <br />
+              <br />
+              My goals are That I wanna learn vue langue or react and become a
+              master in front-end
+            </p>
+          </h3>
         </div>
+      </div>
     </section>
     <section id="protfolio">
-        <h1 id="headings">SKILLS</h1>
-        <div class="gallery">
-            <img src="protfolio/html.png" alt="">
-            <img src="protfolio/CSS3.svg" alt="">
-            <img src="protfolio/js.png" alt="">
-            <img src="./protfolio/TW.png" alt="">
-            <img src="protfolio/bootstrab.png" alt="">
-            <img src="./protfolio/vuejs-removebg-preview.png" alt="">
-            <img src="./protfolio/React.png" alt="">
-            <img src="protfolio/git.png" alt="">
-            <img src="./protfolio/typescript-logo.png" alt="">
-            <img src="./protfolio/node-js-png-removebg-preview.png" alt="">
-            <img src="./protfolio/Exoress_js-removebg-preview.png" alt="">
-            <img src="./protfolio/mongodb-removebg-preview.png" alt="">
-        </div>
+      <h1 id="headings">SKILLS</h1>
+      <div class="gallery">
+        <img src="protfolio/html.png" alt="" />
+        <img src="protfolio/CSS3.svg" alt="" />
+        <img src="protfolio/js.png" alt="" />
+        <img src="./protfolio/TW.png" alt="" />
+        <img src="protfolio/bootstrab.png" alt="" />
+        <img src="./protfolio/vuejs-removebg-preview.png" alt="" />
+        <img src="./protfolio/React.png" alt="" />
+        <img src="protfolio/git.png" alt="" />
+        <img src="./protfolio/typescript-logo.png" alt="" />
+        <img src="./protfolio/node-js-png-removebg-preview.png" alt="" />
+        <img src="./protfolio/Exoress_js-removebg-preview.png" alt="" />
+        <img src="./protfolio/mongodb-removebg-preview.png" alt="" />
+      </div>
     </section>
     <section id="servicse">
-        <h1 id="headings" class="projects">PROJECTS</h1>
-        <div class="row projects ">
-            <div class="box">
-
-                <img src="protfolio/money2.jpg" alt="">
-                <h1 class="headings mb-auto">MASROOFI <br> App </h1>
-                <p class="size">MASROOFI APP Counting money is an important skill you will use in everyday life but
-                    with MASROOFI it's much easir to count your money and all your expenses sorts by categorys.
-                    there is an history and date-time for all of your expenses and you can see them charts so u know
-                    what's the most thing you spent money on. <br>
-                </p>
-                <a class=" size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
-                    href="https://1pyke.github.io/MASROOFI/"> View Here </a>
-            </div>
-
-            <div class="box">
-                <img src="protfolio/Memmory-game2.jpg" alt="">
-                <h1 class="headings mb-auto">Memory<br> Game</h1>
-                <p class="size">The memory game is a common game played with a set of cards. ... If the two cards have
-                    the same picture, then they keep the cards, otherwise they turn the cards face down again <br>
-                </p>
-                <a class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
-                    href="https://1pyke.github.io/Memory-Game/"> View Here </a>
-            </div>
-            <div class="box">
-                <img src="protfolio/Meditation App.png" alt="">
-                <h1 class="headings mb-auto">Meditation App</h1>
-                <p class="size"> Meditation App for focusing the mind on a particular object , thought, or activity, by
-                    playing a quit music that i produced – to train attention and awareness, and achieve a mentally
-                    clear and emotionally calm and stable state. </p><br>
-                <a class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
-                    href="https://1pyke.github.io/Meditation-App/"> View Here </a>
-            </div>
-            <div class="box">
-                <img src="protfolio/Karnov.jpg" alt="">
-                <h1 class="headings">Karnov <br> Beats </h1>
-                <p class="size">I'm Karnov a Nashville-Base Music Producer who meld modern electronic POP with the grit
-                    and authenticity of hip hop and soul, This website for buying my music/beats or looking for
-                    collaborate with a music producer. <br> Under Progress! </p>
-                <a class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
-                    href="https://1pyke.github.io/KARNOV-Beats/"> View Here </a>
-
-            </div>
-            <div class="box">
-                <img src="protfolio/Pokemon.jpg" alt="">
-                <h1 class="headings">Pokemon</h1>
-                <p class="size">A simple website that count all the pokemons in the world :)</p>
-                <a class=" size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
-                    href="https://1pyke.github.io/Pokemon/"> View Here </a>
-            </div>
-            <div class="box">
-
-                <img src="protfolio/attachment_83315236-removebg-preview.png" alt="">
-                <h1 class="headings mb-auto">Drums <br> Kit </h1>
-                <p class="size">a JavaScript Drum kit using the kit and melodies that i made, <br>
-                 At least so you can try some of production and how it works
-                </p>
-                <a class=" size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
-                    href="https://1pyke.github.io/Drum-Kit/"> View Here </a>
-            </div>
+      <h1 id="headings" class="projects">PROJECTS</h1>
+      <div class="row projects">
+        <div class="box">
+          <img src="protfolio/wolford-logo-large.png" alt="" />
+          <h1 class="headings mb-auto">YelpCamp</h1>
+          <p class="size">
+            YelpCamp Website - YelpCamp is a website where users can create and
+            review campgrounds. In order to review or create a campground, you
+            must have an account. This project was created using Node.js,
+            Express, MongoDB, and Bootstrap. Passport.js was used to handle
+            authentication. Features: * Users can create, edit, and remove
+            campgrounds. <br />
+          </p>
+          <a
+            class="size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
+            href="https://yelp-camp-lieth.herokuapp.com/"
+          >
+            View Here
+          </a>
         </div>
+        <div class="box">
+          <img src="protfolio/money2.jpg" alt="" />
+          <h1 class="headings mb-auto">
+            MASROOFI <br />
+            App
+          </h1>
+          <p class="size">
+            MASROOFI APP Counting money is an important skill you will use in
+            everyday life but with MASROOFI it's much easir to count your money
+            and all your expenses sorts by categorys. there is an history and
+            date-time for all of your expenses and you can see them charts so u
+            know what's the most thing you spent money on. <br />
+          </p>
+          <a
+            class="size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
+            href="https://1pyke.github.io/MASROOFI/"
+          >
+            View Here
+          </a>
+        </div>
+
+        <div class="box">
+          <img src="protfolio/Memmory-game2.jpg" alt="" />
+          <h1 class="headings mb-auto">
+            Memory<br />
+            Game
+          </h1>
+          <p class="size">
+            The memory game is a common game played with a set of cards. ... If
+            the two cards have the same picture, then they keep the cards,
+            otherwise they turn the cards face down again <br />
+          </p>
+          <a
+            class="size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
+            href="https://1pyke.github.io/Memory-Game/"
+          >
+            View Here
+          </a>
+        </div>
+        <div class="box">
+          <img src="protfolio/Meditation App.png" alt="" />
+          <h1 class="headings mb-auto">Meditation App</h1>
+          <p class="size">
+            Meditation App for focusing the mind on a particular object ,
+            thought, or activity, by playing a quit music that i produced – to
+            train attention and awareness, and achieve a mentally clear and
+            emotionally calm and stable state.
+          </p>
+          <br />
+          <a
+            class="size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
+            href="https://1pyke.github.io/Meditation-App/"
+          >
+            View Here
+          </a>
+        </div>
+        <div class="box">
+          <img src="protfolio/Karnov.jpg" alt="" />
+          <h1 class="headings">
+            Karnov <br />
+            Beats
+          </h1>
+          <p class="size">
+            I'm Karnov a Nashville-Base Music Producer who meld modern
+            electronic POP with the grit and authenticity of hip hop and soul,
+            This website for buying my music/beats or looking for collaborate
+            with a music producer. <br />
+            Under Progress!
+          </p>
+          <a
+            class="size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
+            href="https://1pyke.github.io/KARNOV-Beats/"
+          >
+            View Here
+          </a>
+        </div>
+        <div class="box">
+          <img src="protfolio/Pokemon.jpg" alt="" />
+          <h1 class="headings">Pokemon</h1>
+          <p class="size">
+            A simple website that count all the pokemons in the world :)
+          </p>
+          <a
+            class="size stretched-link mt-auto p-1 mb-1 bg-white text-dark"
+            href="https://1pyke.github.io/Pokemon/"
+          >
+            View Here
+          </a>
+        </div>
+        <div class="box">
+          <img
+            src="protfolio/attachment_83315236-removebg-preview.png"
+            alt=""
+          />
+          <h1 class="headings mb-auto">
+            Drums <br />
+            Kit
+          </h1>
+          <p class="size">
+            a JavaScript Drum kit using the kit and melodies that i made, <br />
+            At least so you can try some of production and how it works
+          </p>
+          <a
+            class="size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
+            href="https://1pyke.github.io/Drum-Kit/"
+          >
+            View Here
+          </a>
+        </div>
+        <div class="box">
+          <img src="protfolio/1480348_logo_20220227112718_n.png" alt="" />
+          <h1 class="headings mb-auto">Bayt Task</h1>
+          <p class="size">#</p>
+          <a
+            class="size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
+            href="https://1pyke.github.io/Bayt/"
+          >
+            View Here
+          </a>
+        </div>
+        <div class="box">
+          <img src="protfolio/Pokemon.jpg" alt="" />
+          <h1 class="headings mb-auto">Pokemon V2</h1>
+          <p class="size">#</p>
+          <a
+            class="size stretched-link mt-auto p-1 mb-auto bg-white text-dark"
+            href="https://1pyke.github.io/pokemon-2/"
+          >
+            View Here
+          </a>
+        </div>
+      </div>
     </section>
     <footer id="contact">
-        <div class="footerBackground" style="padding: 80px 0;" align="center">
-            <a href="https://www.facebook.com/lieth.zaitoun.3">
-                <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-            </a>
-            <a href="https://twitter.com/lieth59594679">
-                <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-            </a>
-            <a href="https://mail.google.com/mail/u/0/#inbox">
-                <i class="fa fa-google-plus fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/lieth-zaitoun-57039a225/">
-                <i class="fa fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-            </a>
-            <a href="https://www.instagram.com/karnovofficial/">
-                <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
-            </a>
-            <a href="https://github.com/1pyke">
-                <i class="fa fa-github fa-lg white-text fa-2x"></i>
-            </a>
-        </div>
-        <div style="background: #004872;">
-            <p style="color: #91BEC2; padding: 15px 0; margin-bottom: 0;" align="center">
-                &copy; 2021 Copyright for: Lieth Zaitoun
-            </p>
-        </div>
+      <div class="footerBackground" style="padding: 80px 0" align="center">
+        <a href="https://www.facebook.com/lieth.zaitoun.3">
+          <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+        </a>
+        <a href="https://twitter.com/lieth59594679">
+          <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+        </a>
+        <a href="https://mail.google.com/mail/u/0/#inbox">
+          <i class="fa fa-google-plus fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/lieth-zaitoun-57039a225/">
+          <i class="fa fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+        </a>
+        <a href="https://www.instagram.com/karnovofficial/">
+          <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+        </a>
+        <a href="https://github.com/1pyke">
+          <i class="fa fa-github fa-lg white-text fa-2x"></i>
+        </a>
+      </div>
+      <div style="background: #004872">
+        <p
+          style="color: #91bec2; padding: 15px 0; margin-bottom: 0"
+          align="center"
+        >
+          &copy; 2021 Copyright for: Lieth Zaitoun
+        </p>
+      </div>
     </footer>
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
